16943
{code}
scala> import scala.tools.nsc._
import scala.tools.nsc._

scala> def mkReifier(global: Global)(typer: global.analyzer.Typer) = typer
mkReifier: (global: scala.tools.nsc.Global)(typer: global.analyzer.Typer)global.analyzer.Typer

scala> class Reifier(global: Global)(typer: global.analyzer.Typer) { }
<console>:10: error: not found: value global
      class Reifier(global: Global)(typer: global.analyzer.Typer) { }
                                           ^
{code}
